--- a/index.html
+++ b/index.html
@@ -6,71 +6,96 @@
     <title>Sistema Controle de Patrimônio | Help Tec</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        .glass { background: rgba(30, 41, 59, 0.7); backdrop-filter: blur(10px); }
+    </style>
 </head>
-<body class="bg-slate-900 text-slate-100 font-sans">
+<body class="bg-slate-900 text-slate-100 font-sans antialiased">
 
-    <header class="py-16 px-4 bg-gradient-to-b from-blue-900 to-slate-900 text-center">
-        <h1 class="text-4xl md:text-6xl font-extrabold text-blue-400 mb-4">Controle de Patrimônio v1</h1>
-        <p class="text-xl text-slate-300 max-w-2xl mx-auto italic">
-            "Transformando a gestão de ativos com inteligência, rastreabilidade e segurança."
-        </p>
-        <div class="mt-8">
-            <span class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-bold uppercase tracking-widest">Help Tec Soluções Inteligentes</span>
+    <header class="relative py-12 md:py-24 px-6 bg-gradient-to-br from-blue-900 via-slate-900 to-black text-center border-b border-blue-500/20">
+        <div class="max-w-4xl mx-auto">
+            <h1 class="text-3xl md:text-6xl font-black text-white mb-4 tracking-tight">
+                Controle de <span class="text-blue-500">Patrimônio</span>
+            </h1>
+            <p class="text-lg md:text-xl text-slate-400 mb-8 leading-relaxed">
+                A solução definitiva para gestão de ativos com <strong>QR Code</strong> e segurança de nível empresarial.
+            </p>
+            <div class="flex flex-wrap justify-center gap-4">
+                <span class="bg-blue-600/20 text-blue-400 border border-blue-500/30 px-4 py-2 rounded-lg text-xs md:text-sm font-bold uppercase">
+                    <i class="fas fa-check-circle mr-2"></i>Versão v1 (2026)
+                </span>
+                <span class="bg-slate-800 text-slate-300 border border-slate-700 px-4 py-2 rounded-lg text-xs md:text-sm font-bold uppercase">
+                    Help Tec Soluções
+                </span>
+            </div>
         </div>
     </header>
 
-    <section class="max-w-5xl mx-auto px-6 py-12">
-        <div class="grid md:grid-cols-2 gap-12 items-center">
-            <div>
-                <h2 class="text-3xl font-bold mb-6 border-l-4 border-blue-500 pl-4">Sobre o Software</h2>
-                <p class="text-slate-400 leading-relaxed mb-4">
-                    Desenvolvido por <strong>Leandro Souza</strong>, o Sistema de Controle de Patrimônio é uma solução desktop completa para instituições que buscam organizar o inventário de hardware e mobiliário com precisão. 
+    <main class="max-w-6xl mx-auto px-6 py-12">
+        
+        <div class="grid lg:grid-cols-3 gap-8 mb-16">
+            <div class="lg:col-span-2 space-y-6">
+                <h2 class="text-2xl md:text-3xl font-bold border-l-4 border-blue-500 pl-4">Gestão Inteligente</h2>
+                <p class="text-slate-400 text-base md:text-lg">
+                    Desenvolvido por <strong>Leandro Souza</strong>, este sistema foi projetado para eliminar o caos no inventário de instituições públicas e privadas. 
                 </p>
-                <p class="text-slate-400 leading-relaxed">
-                    O software automatiza desde o registro de entrada até a baixa de ativos, gerando etiquetas inteligentes com QR Code para consulta rápida e relatórios profissionais em PDF.
+                <p class="text-slate-400 text-base md:text-lg">
+                    Com uma interface 100% intuitiva em <strong>Dark Mode</strong>, o operador consegue registrar entradas, gerar etiquetas em lote e realizar baixas em segundos, tudo com backup local automático.
                 </p>
             </div>
-            <div class="bg-slate-800 p-8 rounded-2xl shadow-2xl border border-slate-700">
-                <h3 class="text-blue-400 font-bold mb-4"><i class="fas fa-code mr-2"></i> Stack Tecnológica</h3>
-                <ul class="space-y-3 text-sm">
-                    <li><i class="fab fa-python text-blue-500 mr-2"></i> <strong>Python 3.13</strong> - Núcleo de alta performance</li>
-                    <li><i class="fas fa-layer-group text-blue-500 mr-2"></i> <strong>CustomTkinter</strong> - Interface Moderna (Dark Mode)</li>
-                    <li><i class="fas fa-database text-blue-500 mr-2"></i> <strong>SQLite3</strong> - Banco de dados local seguro</li>
-                    <li><i class="fas fa-qrcode text-blue-500 mr-2"></i> <strong>QR Code Engine</strong> - Rastreabilidade em tempo real</li>
-                    <li><i class="fas fa-file-pdf text-blue-500 mr-2"></i> <strong>ReportLab</strong> - Automação de documentos e etiquetas</li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
-    <section class="bg-slate-800/50 py-16 px-6">
-        <div class="max-w-6xl mx-auto">
-            <h2 class="text-3xl font-bold text-center mb-12">Diferenciais do Sistema</h2>
-            <div class="grid md:grid-cols-3 gap-8">
-                <div class="p-6 bg-slate-900 rounded-xl border border-slate-700 hover:border-blue-500 transition">
-                    <i class="fas fa-shield-halved text-4xl text-blue-500 mb-4"></i>
-                    <h3 class="text-xl font-bold mb-2">Segurança Multinível</h3>
-                    <p class="text-slate-400 text-sm">Acesso restrito via login, recuperação de senha por e-mail e chave mestre de hardware.</p>
-                </div>
-                <div class="p-6 bg-slate-900 rounded-xl border border-slate-700 hover:border-blue-500 transition">
-                    <i class="fas fa-print text-4xl text-blue-500 mb-4"></i>
-                    <h3 class="text-xl font-bold mb-2">Etiquetas Inteligentes</h3>
-                    <p class="text-slate-400 text-sm">Geração automática de etiquetas em lote com QR Code integrado para auditorias rápidas.</p>
-                </div>
-                <div class="p-6 bg-slate-900 rounded-xl border border-slate-700 hover:border-blue-500 transition">
-                    <i class="fas fa-cloud-download-alt text-4xl text-blue-500 mb-4"></i>
-                    <h3 class="text-xl font-bold mb-2">Update Silencioso</h3>
-                    <p class="text-slate-400 text-sm">Integração com GitHub para verificação automática de novas versões disponíveis.</p>
+            
+            <div class="glass p-6 rounded-2xl border border-slate-700 shadow-xl">
+                <h3 class="text-blue-400 font-bold mb-4 uppercase text-xs tracking-widest italic">Tecnologias</h3>
+                <div class="flex flex-wrap gap-3">
+                    <span class="bg-slate-800 px-3 py-1 rounded-md text-sm border border-slate-600">Python 3.13</span>
+                    <span class="bg-slate-800 px-3 py-1 rounded-md text-sm border border-slate-600">SQLite3</span>
+                    <span class="bg-slate-800 px-3 py-1 rounded-md text-sm border border-slate-600">CustomTkinter</span>
+                    <span class="bg-slate-800 px-3 py-1 rounded-md text-sm border border-slate-600">ReportLab PDF</span>
                 </div>
             </div>
         </div>
-    </section>
 
-    <footer class="py-12 text-center text-slate-500 text-sm">
-        <p>© 2026 Help Tec Soluções Inteligentes. Desenvolvido por Leandro Souza.</p>
-        <div class="mt-4 space-x-6">
-            <a href="mailto:leandro.souza22oliveira@gmail.com" class="hover:text-blue-400"><i class="fas fa-envelope"></i> E-mail</a>
-            <a href="https://wa.me/5547988647259" class="hover:text-green-400"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div class="p-8 bg-slate-800/40 rounded-3xl border border-slate-700 hover:bg-slate-800 transition group">
+                <div class="w-12 h-12 bg-blue-600 rounded-2xl flex items-center justify-center mb-6 group-hover:scale-110 transition">
+                    <i class="fas fa-qrcode text-white text-xl"></i>
+                </div>
+                <h3 class="text-xl font-bold mb-3">QR Code Automático</h3>
+                <p class="text-slate-400 text-sm leading-relaxed">Geração de etiquetas térmicas ou A4 com códigos rastreáveis para auditoria instantânea por smartphone.</p>
+            </div>
+
+            <div class="p-8 bg-slate-800/40 rounded-3xl border border-slate-700 hover:bg-slate-800 transition group">
+                <div class="w-12 h-12 bg-green-600 rounded-2xl flex items-center justify-center mb-6 group-hover:scale-110 transition">
+                    <i class="fas fa-envelope-open-text text-white text-xl"></i>
+                </div>
+                <h3 class="text-xl font-bold mb-3">Recuperação por E-mail</h3>
+                <p class="text-slate-400 text-sm leading-relaxed">Integração nativa com Gmail SMTP para envio de credenciais e recuperação segura de conta admin.</p>
+            </div>
+
+            <div class="p-8 bg-slate-800/40 rounded-3xl border border-slate-700 hover:bg-slate-800 transition group">
+                <div class="w-12 h-12 bg-purple-600 rounded-2xl flex items-center justify-center mb-6 group-hover:scale-110 transition">
+                    <i class="fas fa-sync text-white text-xl"></i>
+                </div>
+                <h3 class="text-xl font-bold mb-3">Updates via GitHub</h3>
+                <p class="text-slate-400 text-sm leading-relaxed">Sistema inteligente que verifica novas versões no repositório oficial, mantendo o software sempre atualizado.</p>
+            </div>
+        </div>
+    </main>
+
+    <footer class="bg-black/50 py-16 px-6 mt-12 border-t border-slate-800">
+        <div class="max-w-4xl mx-auto text-center">
+            <h2 class="text-2xl font-bold mb-8">Interessado nesta solução?</h2>
+            <div class="flex flex-col md:flex-row justify-center gap-4">
+                <a href="https://wa.me/5547988647259" class="bg-green-600 hover:bg-green-700 text-white px-8 py-4 rounded-full font-bold transition flex items-center justify-center">
+                    <i class="fab fa-whatsapp mr-2 text-xl"></i> Falar no WhatsApp
+                </a>
+                <a href="mailto:leandro.souza22oliveira@gmail.com" class="bg-slate-800 hover:bg-slate-700 text-white px-8 py-4 rounded-full font-bold transition flex items-center justify-center border border-slate-600">
+                    <i class="fas fa-envelope mr-2"></i> Enviar E-mail
+                </a>
+            </div>
+            <p class="mt-12 text-slate-500 text-xs uppercase tracking-widest">
+                © 2026 Leandro Souza - Help Tec Soluções Inteligentes
+            </p>
         </div>
     </footer>
 
