--- a/index.html
+++ b/index.html
@@ -1,91 +1,122 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema Controle de Patrimônio | Help Tec</title>
+    <title>Patrimônio Blindado v1 | Help Tec Soluções</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        .glass { background: rgba(30, 41, 59, 0.7); backdrop-filter: blur(10px); }
-        .img-card:hover { transform: translateY(-10px); transition: all 0.3s ease; }
+        .gradient-text { background: linear-gradient(90deg, #3b82f6, #60a5fa); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+        .hero-mesh { background-color: #0f172a; background-image: radial-gradient(at 0% 0%, rgba(59, 130, 246, 0.15) 0, transparent 50%), radial-gradient(at 50% 0%, rgba(30, 58, 138, 0.3) 0, transparent 50%); }
+        .glass { background: rgba(30, 41, 59, 0.7); backdrop-filter: blur(12px); border: 1px solid rgba(255, 255, 255, 0.1); }
+        .hover-scale { transition: transform 0.3s ease; }
+        .hover-scale:hover { transform: scale(1.02); }
     </style>
 </head>
-<body class="bg-slate-900 text-slate-100 font-sans antialiased">
+<body class="bg-slate-900 text-slate-100 font-sans">
 
-    <header class="relative py-12 md:py-24 px-6 bg-gradient-to-br from-blue-900 via-slate-900 to-black text-center border-b border-blue-500/20">
+    <nav class="fixed w-full z-50 glass">
+        <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
+            <div class="flex items-center gap-2">
+                <div class="w-8 h-8 bg-blue-600 rounded-lg flex items-center justify-center font-bold italic">HT</div>
+                <span class="font-bold tracking-tighter text-xl">HELP TEC</span>
+            </div>
+            <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="bg-blue-600 hover:bg-blue-500 px-5 py-2 rounded-full text-sm font-bold transition shadow-lg shadow-blue-900/40">
+                ADQUIRIR AGORA
+            </a>
+        </div>
+    </nav>
+
+    <section class="hero-mesh pt-32 pb-20 px-6 text-center">
         <div class="max-w-4xl mx-auto">
-            <h1 class="text-3xl md:text-6xl font-black text-white mb-4 tracking-tight uppercase">
-                Controle de <span class="text-blue-500">Patrimônio</span>
+            <span class="inline-block px-4 py-1.5 mb-6 text-xs font-bold tracking-widest text-blue-400 uppercase glass rounded-full">
+                Lançamento Versão 2026
+            </span>
+            <h1 class="text-4xl md:text-7xl font-black mb-6 leading-tight">
+                Controle seu Patrimônio com <span class="gradient-text text-blue-500">Inteligência Absoluta</span>
             </h1>
-            <p class="text-lg md:text-xl text-slate-400 mb-8 italic">"Segurança e Rastreabilidade para sua Instituição"</p>
-            <div class="flex flex-wrap justify-center gap-4">
-                <span class="bg-blue-600/20 text-blue-400 border border-blue-500/30 px-4 py-2 rounded-lg text-xs md:text-sm font-bold tracking-widest uppercase">Help Tec Soluções</span>
-            </div>
-        </div>
-    </header>
-
-    <section class="max-w-6xl mx-auto px-6 py-16">
-        <h2 class="text-3xl font-bold text-center mb-12 uppercase tracking-tight">Interface do <span class="text-blue-500">Sistema</span></h2>
-        
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-            <div class="img-card group">
-                <div class="overflow-hidden rounded-2xl border border-slate-700 bg-slate-800">
-                    <img src="https://via.placeholder.com/600x400/1e293b/3b82f6?text=Login+Seguro+HelpTec" alt="Tela de Login" class="w-full h-auto opacity-80 group-hover:opacity-100 transition">
-                </div>
-                <h3 class="text-center mt-4 font-bold text-blue-400">Acesso Restrito & Seguro</h3>
-            </div>
-
-            <div class="img-card group">
-                <div class="overflow-hidden rounded-2xl border border-slate-700 bg-slate-800">
-                    <img src="https://via.placeholder.com/600x400/1e293b/3b82f6?text=Gestão+de+Estoque+Geral" alt="Dashboard do Sistema" class="w-full h-auto opacity-80 group-hover:opacity-100 transition">
-                </div>
-                <h3 class="text-center mt-4 font-bold text-blue-400">Estoque Geral em Tempo Real</h3>
-            </div>
-
-            <div class="img-card group">
-                <div class="overflow-hidden rounded-2xl border border-slate-700 bg-slate-800">
-                    <img src="https://via.placeholder.com/600x400/1e293b/3b82f6?text=Relatórios+PDF+e+Etiquetas" alt="Relatório PDF" class="w-full h-auto opacity-80 group-hover:opacity-100 transition">
-                </div>
-                <h3 class="text-center mt-4 font-bold text-blue-400">Relatórios e Etiquetas PDF</h3>
-            </div>
-        </div>
-    </section>
-
-    <section class="bg-slate-800/30 py-16 px-6 border-t border-slate-800">
-        <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
-            <div class="p-6 glass rounded-2xl border border-slate-700">
-                <i class="fas fa-qrcode text-3xl text-blue-500 mb-4"></i>
-                <h4 class="text-lg font-bold mb-2">QR Code Integrado</h4>
-                <p class="text-slate-400 text-sm">Cada item recebe um código único que armazena todo o histórico do ativo.</p>
-            </div>
-            <div class="p-6 glass rounded-2xl border border-slate-700">
-                <i class="fas fa-database text-3xl text-green-500 mb-4"></i>
-                <h4 class="text-lg font-bold mb-2">Banco de Dados Local</h4>
-                <p class="text-slate-400 text-sm">Privacidade total. Seus dados ficam na sua máquina, sem depender de nuvens externas.</p>
-            </div>
-            <div class="p-6 glass rounded-2xl border border-slate-700">
-                <i class="fas fa-shield-alt text-3xl text-red-500 mb-4"></i>
-                <h4 class="text-lg font-bold mb-2">Proteção PyArmor</h4>
-                <p class="text-slate-400 text-sm">Código criptografado e blindado contra engenharia reversa e cópias não autorizadas.</p>
-            </div>
-        </div>
-    </section>
-
-    <footer class="py-20 px-6 text-center">
-        <div class="max-w-2xl mx-auto">
-            <h2 class="text-2xl font-bold mb-8 uppercase tracking-widest">Solicitar Demonstração</h2>
-            <div class="flex flex-col md:flex-row justify-center gap-6">
-                <a href="https://wa.me/5547988647259" class="bg-green-600 hover:bg-green-700 text-white px-10 py-4 rounded-xl font-bold transition flex items-center justify-center shadow-lg shadow-green-900/20">
-                    <i class="fab fa-whatsapp mr-3 text-2xl"></i> WHATSAPP
-                </a>
-                <a href="mailto:leandro.souza22oliveira@gmail.com" class="bg-blue-600 hover:bg-blue-700 text-white px-10 py-4 rounded-xl font-bold transition flex items-center justify-center shadow-lg shadow-blue-900/20">
-                    <i class="fas fa-envelope mr-3 text-xl"></i> E-MAIL
-                </a>
-            </div>
-            <p class="mt-16 text-slate-600 text-[10px] tracking-[0.3em] uppercase">
-                © 2026 Leandro Souza - Help Tec Soluções Inteligentes
+            <p class="text-lg md:text-xl text-slate-400 mb-10 max-w-2xl mx-auto leading-relaxed">
+                Rastreabilidade por QR Code, relatórios automáticos em PDF e segurança local criptografada. A solução definitiva para prefeituras e empresas.
             </p>
+            <div class="flex flex-col sm:flex-row justify-center gap-4">
+                <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="bg-white text-slate-900 px-8 py-4 rounded-2xl font-black text-lg hover:bg-blue-50 transition-all flex items-center justify-center gap-2">
+                    <i class="fas fa-shopping-cart"></i> COMPRAR LICENÇA
+                </a>
+                <a href="#galeria" class="glass px-8 py-4 rounded-2xl font-bold text-lg hover:bg-slate-800 transition-all">
+                    VER TELAS DO SISTEMA
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="max-w-7xl mx-auto px-6 py-20">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+            <div class="glass p-8 rounded-3xl hover-scale">
+                <div class="w-14 h-14 bg-blue-600/20 rounded-2xl flex items-center justify-center mb-6">
+                    <i class="fas fa-qrcode text-2xl text-blue-500"></i>
+                </div>
+                <h3 class="text-xl font-bold mb-3">QR Code Automático</h3>
+                <p class="text-slate-400 text-sm leading-relaxed">Gere etiquetas inteligentes instantaneamente. Identifique qualquer ativo em segundos usando apenas a câmera do celular.</p>
+            </div>
+            <div class="glass p-8 rounded-3xl hover-scale border-blue-500/30">
+                <div class="w-14 h-14 bg-blue-600 rounded-2xl flex items-center justify-center mb-6 shadow-xl shadow-blue-900/40">
+                    <i class="fas fa-file-pdf text-2xl text-white"></i>
+                </div>
+                <h3 class="text-xl font-bold mb-3 text-white">Relatórios em Lote</h3>
+                <p class="text-slate-300 text-sm leading-relaxed">Exporte listagens completas de entrada, saída e inventário em PDF profissional pronto para impressão ou envio.</p>
+            </div>
+            <div class="glass p-8 rounded-3xl hover-scale">
+                <div class="w-14 h-14 bg-blue-600/20 rounded-2xl flex items-center justify-center mb-6">
+                    <i class="fas fa-shield-halved text-2xl text-blue-500"></i>
+                </div>
+                <h3 class="text-xl font-bold mb-3">Privacidade Offline</h3>
+                <p class="text-slate-400 text-sm leading-relaxed">Seus dados não ficam na nuvem. O banco de dados SQLite local garante que as informações da sua instituição fiquem sob seu controle.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="galeria" class="py-20 px-6 bg-slate-800/20 shadow-inner">
+        <div class="max-w-7xl mx-auto">
+            <div class="text-center mb-16">
+                <h2 class="text-3xl md:text-5xl font-black mb-4 uppercase italic">Interface <span class="text-blue-500 tracking-tighter">Dark Mode</span></h2>
+                <p class="text-slate-400">Design moderno, intuitivo e de alta performance.</p>
+            </div>
+            
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                <div class="rounded-3xl overflow-hidden border border-slate-700 bg-slate-900 group shadow-2xl shadow-black/50">
+                    <img src="img/dashboard.png" alt="Dashboard do Sistema" class="w-full opacity-80 group-hover:opacity-100 transition-all duration-500 group-hover:scale-105">
+                    <div class="p-6">
+                        <span class="text-blue-500 text-xs font-black tracking-widest uppercase">Módulo Principal</span>
+                        <h4 class="text-xl font-bold mt-1 uppercase italic font-black">Dashboard de Inventário</h4>
+                    </div>
+                </div>
+                <div class="rounded-3xl overflow-hidden border border-slate-700 bg-slate-900 group shadow-2xl shadow-black/50">
+                    <img src="img/etiquetas.png" alt="Geração de Etiquetas" class="w-full opacity-80 group-hover:opacity-100 transition-all duration-500 group-hover:scale-105">
+                    <div class="p-6">
+                        <span class="text-blue-500 text-xs font-black tracking-widest uppercase">Automação</span>
+                        <h4 class="text-xl font-bold mt-1 uppercase italic font-black">Gerador de Etiquetas PDF</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="py-24 px-6 text-center bg-blue-600">
+        <div class="max-w-3xl mx-auto">
+            <h2 class="text-4xl font-black mb-6 text-white leading-tight uppercase tracking-tighter">Pronto para profissionalizar sua gestão?</h2>
+            <p class="text-blue-100 text-lg mb-10 font-medium">Acesso vitalício, instalação guiada e suporte técnico direto com o desenvolvedor.</p>
+            <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="bg-slate-900 text-white px-12 py-5 rounded-3xl font-black text-xl hover:bg-slate-800 transition shadow-2xl inline-flex items-center gap-3 tracking-widest">
+                GARANTIR MINHA LICENÇA <i class="fas fa-arrow-right"></i>
+            </a>
+        </div>
+    </section>
+
+    <footer class="py-12 border-t border-slate-800 text-center px-6">
+        <p class="text-slate-500 text-sm mb-4">© 2026 Help Tec Soluções Inteligentes | Leandro Souza</p>
+        <div class="flex justify-center gap-6 text-slate-400">
+            <a href="https://wa.me/5547988647259" class="hover:text-green-500"><i class="fab fa-whatsapp"></i> Suporte Comercial</a>
+            <a href="mailto:leandro.souza22oliveira@gmail.com" class="hover:text-blue-500"><i class="fas fa-envelope"></i> E-mail</a>
         </div>
     </footer>
 
