--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
             
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div class="group rounded-3xl overflow-hidden border border-slate-700 bg-slate-800 shadow-2xl">
-                    <img src="img/dashboard.png" alt="Dashboard" class="w-full opacity-90 group-hover:opacity-100 transition-all duration-500 hover:scale-105">
+                    <img src="painel.png" alt="Dashboard" class="w-full opacity-90 group-hover:opacity-100 transition-all duration-500 hover:scale-105">
                     <div class="p-6 bg-slate-800">
                         <h4 class="font-bold text-lg uppercase italic text-blue-400">Painel de Controle</h4>
                     </div>
                 </div>
                 <div class="group rounded-3xl overflow-hidden border border-slate-700 bg-slate-800 shadow-2xl">
-                    <img src="img/etiquetas.png" alt="Etiquetas" class="w-full opacity-90 group-hover:opacity-100 transition-all duration-500 hover:scale-105">
+                    <img src="etiquetas.png" alt="Etiquetas" class="w-full opacity-90 group-hover:opacity-100 transition-all duration-500 hover:scale-105">
                     <div class="p-6 bg-slate-800">
                         <h4 class="font-bold text-lg uppercase italic text-blue-400">Gerador de QR Code</h4>
                     </div>
