--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema Controle de Patrimônio | Help Tec Soluções</title>
+    <title>Patrimônio Blindado v1 | Help Tec Soluções</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -16,8 +16,8 @@
 
     <nav class="fixed w-full z-50 glass">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 py-4 flex justify-between items-center">
-            <div class="flex items-center gap-2">
-                <div class="w-8 h-8 bg-blue-600 rounded-lg flex items-center justify-center font-bold italic shadow-lg shadow-blue-500/20">HT</div>
+            <div class="flex items-center gap-3">
+                <img src="logo.png" alt="Logo Help Tec" class="w-10 h-10 object-contain rounded-lg"> 
                 <span class="font-bold tracking-tighter text-lg md:text-xl uppercase">HELP TEC</span>
             </div>
             <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="bg-blue-600 hover:bg-blue-500 text-white px-4 py-2 rounded-full text-xs md:text-sm font-black transition-all">
@@ -29,11 +29,8 @@
     <section class="hero-mesh pt-28 pb-16 md:pt-40 md:pb-32 px-6 text-center">
         <div class="max-w-4xl mx-auto">
             <h1 class="text-3xl md:text-7xl font-black mb-6 leading-tight uppercase tracking-tighter">
-                O FIM DA BAGUNÇA NO SEU <span class="gradient-text text-blue-500 text-nowrap">PATRIMÔNIO</span>
+                O FIM DA BAGUNÇA NO SEU <span class="gradient-text text-blue-500">PATRIMÔNIO</span>
             </h1>
-            <p class="text-base md:text-xl text-slate-400 mb-8 max-w-2xl mx-auto">
-                Sistema profissional com QR Code e Relatórios PDF. Segurança local para seus dados.
-            </p>
             
             <div class="inline-block glass p-6 md:p-8 rounded-3xl border border-blue-500/30 mb-10 shadow-2xl">
                 <p class="text-slate-400 text-xs md:text-sm uppercase font-bold tracking-widest mb-2">Oferta de Lançamento</p>
@@ -43,8 +40,8 @@
                 </div>
             </div>
 
-            <div class="flex flex-col sm:flex-row justify-center gap-4">
-                <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="bg-white text-slate-900 px-8 py-4 rounded-2xl font-black text-lg hover:scale-105 transition-transform flex items-center justify-center gap-2 shadow-xl">
+            <div class="flex justify-center">
+                <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="bg-white text-slate-900 px-8 py-4 rounded-2xl font-black text-lg hover:scale-105 transition-transform flex items-center gap-2 shadow-xl">
                     <i class="fas fa-shopping-cart"></i> QUERO O SISTEMA
                 </a>
             </div>
@@ -53,57 +50,50 @@
 
     <section id="galeria" class="py-16 px-6 bg-slate-900">
         <div class="max-w-6xl mx-auto">
-            <h2 class="text-2xl md:text-4xl font-black text-center mb-12 uppercase italic">Interface <span class="text-blue-500">Dark Mode</span></h2>
-            
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+            <h2 class="text-2xl md:text-4xl font-black text-center mb-12 uppercase italic">Interface <span class="text-blue-500 font-black">Dark Mode</span></h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-12">
                 <div class="group rounded-3xl overflow-hidden border border-slate-700 bg-slate-800 shadow-2xl">
-                    <img src="painel.png" alt="Dashboard" class="w-full opacity-90 group-hover:opacity-100 transition-all duration-500 hover:scale-105">
-                    <div class="p-6 bg-slate-800">
-                        <h4 class="font-bold text-lg uppercase italic text-blue-400">Painel de Controle</h4>
-                    </div>
+                    <img src="painel.png" alt="Painel Principal" class="w-full opacity-90 group-hover:opacity-100 transition-all duration-500 hover:scale-105">
+                    <div class="p-4 bg-slate-800 text-center"><h4 class="font-bold text-blue-400">PAINEL DE CONTROLE</h4></div>
                 </div>
                 <div class="group rounded-3xl overflow-hidden border border-slate-700 bg-slate-800 shadow-2xl">
                     <img src="etiquetas.png" alt="Etiquetas" class="w-full opacity-90 group-hover:opacity-100 transition-all duration-500 hover:scale-105">
-                    <div class="p-6 bg-slate-800">
-                        <h4 class="font-bold text-lg uppercase italic text-blue-400">Gerador de QR Code</h4>
-                    </div>
+                    <div class="p-4 bg-slate-800 text-center"><h4 class="font-bold text-blue-400">GERADOR DE QR CODE</h4></div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="py-16 px-6 bg-slate-800/30">
-        <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-6">
-            <div class="glass p-6 rounded-2xl text-center">
-                <i class="fas fa-bolt text-yellow-500 text-3xl mb-4"></i>
-                <h3 class="font-bold text-lg">Leve e Rápido</h3>
-                <p class="text-slate-400 text-sm mt-2">Instalação em segundos, performance instantânea.</p>
-            </div>
-            <div class="glass p-6 rounded-2xl text-center">
-                <i class="fas fa-lock text-green-500 text-3xl mb-4"></i>
-                <h3 class="font-bold text-lg">100% Privado</h3>
-                <p class="text-slate-400 text-sm mt-2">Banco de dados local. Seus dados não saem da empresa.</p>
-            </div>
-            <div class="glass p-6 rounded-2xl text-center">
-                <i class="fas fa-headset text-blue-500 text-3xl mb-4"></i>
-                <h3 class="font-bold text-lg">Suporte Vitalício</h3>
-                <p class="text-slate-400 text-sm mt-2">Dúvidas? Fale direto com o desenvolvedor.</p>
+    <section class="py-16 px-6 bg-slate-800/30 border-y border-slate-800">
+        <div class="max-w-6xl mx-auto">
+            <h2 class="text-2xl md:text-4xl font-black text-center mb-12 uppercase italic text-white">Instalação <span class="text-blue-500">Simples e Rápida</span></h2>
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
+                <div class="glass p-2 rounded-xl">
+                    <img src="Instalação1-avançar-informação.png" class="rounded-lg w-full mb-2">
+                    <p class="text-[10px] text-center font-bold text-slate-400 uppercase">1. Informação</p>
+                </div>
+                <div class="glass p-2 rounded-xl">
+                    <img src="Instalação2-aceite-licença.png" class="rounded-lg w-full mb-2">
+                    <p class="text-[10px] text-center font-bold text-slate-400 uppercase">2. Contrato</p>
+                </div>
+                <div class="glass p-2 rounded-xl">
+                    <img src="Instalação3-local.png" class="rounded-lg w-full mb-2">
+                    <p class="text-[10px] text-center font-bold text-slate-400 uppercase">3. Destino</p>
+                </div>
+                <div class="glass p-2 rounded-xl">
+                    <img src="Instalação6-informações-finais.png" class="rounded-lg w-full mb-2">
+                    <p class="text-[10px] text-center font-bold text-slate-400 uppercase">4. Conclusão</p>
+                </div>
             </div>
         </div>
     </section>
 
     <footer class="py-12 px-6 text-center border-t border-slate-800">
         <div class="mb-6 flex justify-center gap-6">
-            <a href="https://wa.me/5547988647259" class="text-slate-400 hover:text-green-500 transition-colors">
-                <i class="fab fa-whatsapp text-2xl"></i>
-            </a>
-            <a href="mailto:leandro.souza22oliveira@gmail.com" class="text-slate-400 hover:text-blue-500 transition-colors">
-                <i class="fas fa-envelope text-2xl"></i>
-            </a>
+            <a href="https://wa.me/5547988647259" class="text-slate-400 hover:text-green-500 transition-colors"><i class="fab fa-whatsapp text-2xl"></i></a>
+            <a href="mailto:leandro.souza22oliveira@gmail.com" class="text-slate-400 hover:text-blue-500 transition-colors"><i class="fas fa-envelope text-2xl"></i></a>
         </div>
-        <p class="text-slate-500 text-xs uppercase tracking-widest italic">
-            © 2026 HELP TEC SOLUÇÕES | LEANDRO SOUZA
-        </p>
+        <p class="text-slate-500 text-xs uppercase tracking-widest italic">© 2026 HELP TEC SOLUÇÕES | LEANDRO SOUZA</p>
     </footer>
 
 </body>
